--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@
 
 body {
     background-color: oklch(20.8% 0.042 265.755);
+    overflow-x: hidden;
 }
 
 * {
     font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
+    
 }
