--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body {
     overflow-x: hidden;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
